Incorporate CSS variables.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+:root {
+  --color-active: #DDD;
+  --color-bg-white: #EEE;
+
+  --font-color-dark: #333;
+
+  --font-size-regular: 1.6rem;
+}
+
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
