--- a/src/WeatherIndicator/TemperatureGroup/TemperatureGroup.css
+++ b/src/WeatherIndicator/TemperatureGroup/TemperatureGroup.css
@@ -6,9 +6,9 @@
 
 .temp-group > * {
   margin: 0 0 1rem;
-  font-size: 1.2rem;
+  font-size: var(--font-size-regular);
 }
 
 .max-temp {
-  color: #333;
+  color: var(--font-color-dark);
 }
